--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,7 +28,7 @@
         android:textSize="40sp"
         android:textColor="#FFFFFF"
         android:id="@+id/gotItButton"
-        android:src="@drawable/ic_done_white_48dp"
+        app:srcCompat="@drawable/ic_done_white_48dp"
         android:background="#4CAF50" />
 
 </LinearLayout>
